--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,6 @@ ul.side-nav.fixed li.logo:hover {
 a {
   color: #ffab40;
 }
+ul.side-nav.full li:hover, ul.side-nav.full li.active, ul.side-nav.fixed li:hover, ul.side-nav.fixed li.active {
+    background-color: #4caf50;
+}
