Lighter green for hover

--- a/css/style.css
+++ b/css/style.css
@@ -71,5 +71,5 @@ a {
   color: #ffab40;
 }
 ul.side-nav.full li:hover, ul.side-nav.full li.active, ul.side-nav.fixed li:hover, ul.side-nav.fixed li.active {
-    background-color: #4caf50;
+    background-color: #81c784;
 }
