--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,12 @@ a {
 ul.side-nav.full li:hover, ul.side-nav.full li.active, ul.side-nav.fixed li:hover, ul.side-nav.fixed li.active {
     background-color: #81c784;
 }
+input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=date]:focus, input[type=tel]:focus, input[type=number]:focus, textarea:focus.materialize-textarea {
+    border-bottom: 1px solid #ffab40;
+    -webkit-box-shadow: 0 1px 0 0 #ffab40;
+    -moz-box-shadow: 0 1px 0 0 #ffab40;
+    box-shadow: 0 1px 0 0 #ffab40;
+}
+.input-field input[type=text]:focus+label, .input-field input[type=password]:focus+label, .input-field input[type=email]:focus+label, .input-field input[type=date]:focus+label, .input-field input[type=tel]:focus+label, .input-field input[type=number]:focus+label, .input-field textarea:focus.materialize-textarea+label {
+    color: #ffab40;
+}
