--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,14 @@ ul.side-nav.fixed li.logo:hover {
 a {
   color: #ffab40;
 }
-ul.side-nav.full li:hover, ul.side-nav.full li.active, ul.side-nav.fixed li:hover, ul.side-nav.fixed li.active {
-    background-color: #81c784;
+ul.side-nav.full li, ul.side-nav.fixed li {
+	transition: background-color 0.3s ease 0s;
+}
+ul.side-nav.full li:hover, ul.side-nav.fixed li:hover {
+	background-color: #ebf6eb;
+}
+ul.side-nav.full li.active, ul.side-nav.fixed li.active {
+    background-color: #a4d7a6;
 }
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=date]:focus, input[type=tel]:focus, input[type=number]:focus, textarea:focus.materialize-textarea {
     border-bottom: 1px solid #ffab40;
