--- a/css/style.css
+++ b/css/style.css
@@ -11,25 +11,29 @@ header, main, footer {
 padding-left: 240px;
 }
 }
- 
+
+body
+{
+	background-color: #fbfbfb;
+}
  
 .icon-block {
     padding: 0 15px;
 }
 
 .input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label, .input-field input[type=email]:focus + label, .input-field input[type=date]:focus + label, .input-field textarea:focus + label {
-    color: #ffab40;
+    color: #ff950d;
 }
 
 .input-field .prefix.active {
-    color: #ffab40;
+    color: #ff950d;
 }
 
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=date]:focus, textarea:focus {
-    border-bottom: 1px solid #ffab40;
-    -webkit-box-shadow: 0 1px 0 0 #ffab40;
-    -moz-box-shadow: 0 1px 0 0 #ffab40;
-    box-shadow: 0 1px 0 0 #ffab40;
+    border-bottom: 1px solid #ff950d;
+    -webkit-box-shadow: 0 1px 0 0 #ff950d;
+    -moz-box-shadow: 0 1px 0 0 #ff950d;
+    box-shadow: 0 1px 0 0 #ff950d;
 }
 
 @media only screen and (min-width : 993) {
@@ -68,7 +72,7 @@ ul.side-nav.fixed li.logo:hover {
 
 
 a {
-  color: #ffab40;
+  color: #ff950d;
 }
 ul.side-nav.full li, ul.side-nav.fixed li {
 	transition: background-color 0.3s ease 0s;
@@ -80,11 +84,11 @@ ul.side-nav.full li.active, ul.side-nav.fixed li.active {
     background-color: #a4d7a6;
 }
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=date]:focus, input[type=tel]:focus, input[type=number]:focus, textarea:focus.materialize-textarea {
-    border-bottom: 1px solid #ffab40;
-    -webkit-box-shadow: 0 1px 0 0 #ffab40;
-    -moz-box-shadow: 0 1px 0 0 #ffab40;
-    box-shadow: 0 1px 0 0 #ffab40;
+    border-bottom: 1px solid #ff950d;
+    -webkit-box-shadow: 0 1px 0 0 #ff950d;
+    -moz-box-shadow: 0 1px 0 0 #ff950d;
+    box-shadow: 0 1px 0 0 #ff950d;
 }
 .input-field input[type=text]:focus+label, .input-field input[type=password]:focus+label, .input-field input[type=email]:focus+label, .input-field input[type=date]:focus+label, .input-field input[type=tel]:focus+label, .input-field input[type=number]:focus+label, .input-field textarea:focus.materialize-textarea+label {
-    color: #ffab40;
+    color: #ff950d;
 }
