--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
 .input-field input[type=text]:focus+label, .input-field input[type=password]:focus+label, .input-field input[type=email]:focus+label, .input-field input[type=date]:focus+label, .input-field input[type=tel]:focus+label, .input-field input[type=number]:focus+label, .input-field textarea:focus.materialize-textarea+label {
 	color: #ff950d;
 }
+
+.card .card-action {
+	border-top: 1px solid rgba(73, 164, 77, 1);
+}
