--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
 }
 
 .card .card-action {
-	border-top: 1px solid rgba(200, 200, 200, .25);
+	border-top: 1px solid #388e3c;
 }
 
 body
