--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
 }
 
 .card .card-action {
-	border-top: 1px solid #388e3c;
+	border-top: 1px solid #3949ab;
 }
 
 body
@@ -100,11 +100,10 @@ main
 }
 
 .card a {
-	color: #9fa8da;
 	margin-right: 0;
 	text-transform: none;
 }
 
-.card a:hover {
-	color: #c5cae9;
+b {
+	color: #3949ab;
 }
