--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,18 @@
 }
 
 .input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label, .input-field input[type=email]:focus + label, .input-field input[type=date]:focus + label, .input-field textarea:focus + label {
-	color: #3949ab;
+	color: #536dfe;
 }
 
 .input-field .prefix.active {
-	color: #3949ab;
+	color: #536dfe;
 }
 
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=date]:focus, textarea:focus {
-	border-bottom: 1px solid #3949ab;
-	-webkit-box-shadow: 0 1px 0 0 #3949ab;
-	-moz-box-shadow: 0 1px 0 0 #3949ab;
-	box-shadow: 0 1px 0 0 #3949ab;
+	border-bottom: 1px solid #536dfe;
+	-webkit-box-shadow: 0 1px 0 0 #536dfe;
+	-moz-box-shadow: 0 1px 0 0 #536dfe;
+	box-shadow: 0 1px 0 0 #536dfe;
 }
 
 @media only screen and (min-width : 993) {
@@ -58,7 +58,7 @@ ul.side-nav.fixed li.logo:hover {
 }
 
 a {
-	color: #3949ab;
+	color: #536dfe;
 }
 
 ul.side-nav.full li, ul.side-nav.fixed li {
@@ -74,14 +74,14 @@ ul.side-nav.full li.active, ul.side-nav.fixed li.active {
 }
 
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=date]:focus, input[type=tel]:focus, input[type=number]:focus, textarea:focus.materialize-textarea {
-	border-bottom: 1px solid #3949ab;
-	-webkit-box-shadow: 0 1px 0 0 #3949ab;
-	-moz-box-shadow: 0 1px 0 0 #3949ab;
-	box-shadow: 0 1px 0 0 #3949ab;
+	border-bottom: 1px solid #536dfe;
+	-webkit-box-shadow: 0 1px 0 0 #536dfe;
+	-moz-box-shadow: 0 1px 0 0 #536dfe;
+	box-shadow: 0 1px 0 0 #536dfe;
 }
 
 .input-field input[type=text]:focus+label, .input-field input[type=password]:focus+label, .input-field input[type=email]:focus+label, .input-field input[type=date]:focus+label, .input-field input[type=tel]:focus+label, .input-field input[type=number]:focus+label, .input-field textarea:focus.materialize-textarea+label {
-	color: #3949ab;
+	color: #536dfe;
 }
 
 .card .card-action {
@@ -105,5 +105,5 @@ main
 }
 
 b {
-	color: #536DFE;
+	color: #536dfe;
 }
